<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/t_weight" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_weight="0"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="start"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/t_height" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="start"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/t_bmi" />

        <TextView
            android:id="@+id/bmiValueOutput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:gravity="center|center_vertical"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="" />

        <TextView
            android:id="@+id/bmiTypeOutput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:gravity="center|center_vertical"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:text="@string/t_clear" />

            <Button
                android:id="@+id/countButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:text="@string/t_count" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>